# serializer version: 1
# name: test_fan_entities_snapshot[fan.maple_residence_living_room_air_inlet-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.maple_residence_living_room_air_inlet',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': 'io://1234-5678-1698/10001-VentilationInlet',
    'unit_of_measurement': None,
  })
# ---
# name: test_fan_entities_snapshot[fan.maple_residence_living_room_air_inlet-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living Room Air Inlet',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 40,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 1.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.maple_residence_living_room_air_inlet',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_fan_entities_snapshot[fan.maple_residence_living_room_air_outlet-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.maple_residence_living_room_air_outlet',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': 'io://1234-5678-1698/10002-VentilationOutlet',
    'unit_of_measurement': None,
  })
# ---
# name: test_fan_entities_snapshot[fan.maple_residence_living_room_air_outlet-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living Room Air Outlet',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 0,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 1.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.maple_residence_living_room_air_outlet',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_fan_entities_snapshot[fan.maple_residence_living_room_air_transfer-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'fan',
    'entity_category': None,
    'entity_id': 'fan.maple_residence_living_room_air_transfer',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'overkiz',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <FanEntityFeature: 49>,
    'translation_key': None,
    'unique_id': 'io://1234-5678-1698/10003-VentilationTransfer',
    'unit_of_measurement': None,
  })
# ---
# name: test_fan_entities_snapshot[fan.maple_residence_living_room_air_transfer-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living Room Air Transfer',
      <FanEntityStateAttribute.PERCENTAGE: 'percentage'>: 75,
      <FanEntityStateAttribute.PERCENTAGE_STEP: 'percentage_step'>: 1.0,
      <FanEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <FanEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <FanEntityFeature: 49>,
    }),
    'context': <ANY>,
    'entity_id': 'fan.maple_residence_living_room_air_transfer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
